# 3d_tailsitter_dynamics

./: .clang-format  .gitignore  README.md  animate.py  global_dynamics.py  indi_traj_tracking_controller.py  main_advanced.py  main_simple.py  player.py  pyproject.toml  simple_dynamics.py
cpp/: CMakeLists.txt
cpp/inc/: aircraft_controller.hpp  aircraft_controller_model.hpp  aircraft_controller_params.hpp  aircraft_dynamics.hpp  rkf45.hpp
cpp/sim_and_control/inc/: aircraft_dynamics.hpp  aircraft_model.hpp  helpers.hpp
cpp/sim_and_control/src/: aircraft_controller.cpp  aircraft_dynamics.cpp  aircraft_model.cpp  main.cpp
cpp/src/: aircraft_controller.cpp  aircraft_controller_model.cpp  aircraft_controller_params.cpp  aircraft_dynamics.cpp  helpers.cpp  main.cpp  rkf45.cpp
cpp/trajectory_generation/: CMakeLists.txt
cpp/trajectory_generation/inc/: min_snap_traj.hpp  polynomial.hpp  state.hpp
cpp/trajectory_generation/src/: main.cpp  min_snap_traj.cpp  polynomial.cpp
param_files/: aircraft_model_params.toml  controller_params.toml  initial_conditions.toml  run_settings.toml
python/: animate.py  main.py  plot_output.py  traj_gen.py  traj_gen_circle.py  traj_gen_min_snap.py  traj_testing.py
trajectory_files/: trajectory-16m-circle.csv
waypoint_files/: waypoint_test.csv
